# cozempic

./: .gitignore  LICENSE  README.md  pyproject.toml
plugin/: .mcp.json  README.md
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
plugin/servers/: cozempic_mcp.py
plugin/skills/diagnose/: SKILL.md
plugin/skills/doctor/: SKILL.md
plugin/skills/guard/: SKILL.md
plugin/skills/reload/: SKILL.md
plugin/skills/treat/: SKILL.md
src/cozempic/: __init__.py  cli.py  diagnosis.py  doctor.py  executor.py  guard.py  helpers.py  init.py  overflow.py  recap.py  registry.py  session.py  team.py  tokens.py  types.py  watcher.py
src/cozempic/data/: cozempic_slash_command.md
src/cozempic/strategies/: __init__.py  aggressive.py  gentle.py  standard.py
tests/: test_overflow.py  test_strategies.py  test_tokens.py
