[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cozempic"
version = "0.1.0"
description = "Context weight-loss tool for Claude Code — prune bloated JSONL conversation files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ruya AI" },
    { name = "Junaid Qureshi" },
]
keywords = ["claude", "claude-code", "context", "pruning", "jsonl", "optimization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]

[project.scripts]
cozempic = "cozempic.cli:main"

[project.urls]
Homepage = "https://github.com/junaidtitan/cozempic"
Repository = "https://github.com/junaidtitan/cozempic"
Issues = "https://github.com/junaidtitan/cozempic/issues"

[tool.setuptools.packages.find]
where = ["src"]
