[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cozempic"
version = "0.4.1"
description = "Context cleaning for Claude Code — remove the bloat, keep everything that matters, protect Agent Teams from context loss"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ruya AI" },
    { name = "Junaid Qureshi" },
]
keywords = ["claude", "claude-code", "context", "pruning", "jsonl", "optimization", "agent-teams", "compaction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]

[project.scripts]
cozempic = "cozempic.cli:main"

[project.urls]
Homepage = "https://github.com/Ruya-AI/cozempic"
Repository = "https://github.com/Ruya-AI/cozempic"
Issues = "https://github.com/Ruya-AI/cozempic/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cozempic = ["data/*.md"]
